Refactor owner commands, improve TTS error handling, and add context support for interaction types.